# annofab-cli

./: .flake8  .gitignore  .gitleaks.toml  .readthedocs.yaml  .travis.yml  AGENTS.md  Makefile  PULL_REQUEST.md  Pipfile  README.md  README_for_developer.md  docker-build.sh  foo.py  pylintrc  pyproject.toml  pytest.ini  setup.cfg  setup.py  toolbar.html
.clinerules/: overview.md
.codex/: config.toml
.codex/rules/: default.rules
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/.travis/: test.sh
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql-analysis.yml  copilot-setup-steps.yml  lint-test.yml  publish-to-pypi.yml  release.yml
annofabcli/: __init__.py  __main__.py  __version__.py  cancel_acceptance.py  complete_tasks.py  delete_users.py  deprecated_register_annotation_from_full_zip.py  deprecated_write_annotation_image.py  diff_projects.py  download.py  invite_users.py  list_users.py  print_inspections.py  print_label_color.py  print_specs.py  print_unprocessed_inspections.py  reject_tasks.py  subcommand_inspection.py  subcommand_project.py  subcommand_task.py  write_annotation_image.py
annofabcli/annotation/: annotation_query.py  change_annotation_attributes.py  change_annotation_attributes_per_annotation.py  change_annotation_data_per_annotation.py  change_annotation_editor_props.py  change_annotation_label.py  change_annotation_labels.py  change_annotation_properties.py  copy_annotation.py  create_classification_annotation.py  dataclass.py  delete_annotation.py  delete_invalid_attribute_value.py  delete_invalid_label_annotation.py  download_annotation_zip.py  dump_annotation.py  editor_props.py  import_annotation.py  list_annotation.py  list_annotation_attribute_filled_count.py  list_annotation_count.py  merge_segmentation.py  model.py  remove_segmentation_overlap.py  restore_annotation.py  restore_anotation.py  subcommand_annotation.py
annofabcli/annotation_specs/: add_attribute.py  add_attribute_restriction.py  add_attributes.py  add_choice_attribute.py  add_choices_to_attribute.py  add_existing_attribute.py  add_existing_attribute_to_labels.py  add_label.py  add_labels.py  attribute_required.py  attribute_restriction.py  change_attribute_type.py  color.py  delete_attribute.py  delete_attribute_restriction.py  delete_attributes.py  delete_choices.py  delete_labels.py  diff.py  diff_annotation_specs.py  diff_compare.py  diff_models.py  diff_text_formatter.py  export_annotation_specs.py  get_annotation_specs_with_attribute_id_replaced.py  get_annotation_specs_with_choice_id_replaced.py  get_annotation_specs_with_label_id_replaced.py  import_annotation_specs.py  list_annotation_specs_attribute.py  list_annotation_specs_choice.py  list_annotation_specs_history.py  list_annotation_specs_inspection_phrase.py  list_annotation_specs_label.py  list_annotation_specs_label_attribute.py  list_attribute_restriction.py  list_label_color.py  print_annotation_specs_label.py  print_label_color.py  put_label_color.py  reorder_attributes.py  (+11 more)
annofabcli/annotation_zip/: __init__.py  count_annotation.py  count_annotation_attribute_filled.py  count_annotation_by_attribute_value.py  count_annotation_by_label.py  diff_annotation.py  filter.py  list_annotation_3d_bounding_box.py  list_annotation_attribute.py  list_annotation_bounding_box_2d.py  list_classification_annotation.py  list_polygon_annotation.py  list_polyline_annotation.py  list_range_annotation.py  list_segmentation_annotation.py  list_single_point_annotation.py  merge.py  render.py  subcommand_annotation_zip.py  validate_annotation.py  visualize_annotation_count.py  visualize_annotation_count_by_attribute_value.py  visualize_annotation_count_by_label.py
annofabcli/comment/: delete_comment.py  delete_inspection_comment.py  delete_onhold_comment.py  download_comment_json.py  list_all_comment.py  list_comment.py  put_comment.py  put_comment_simply.py  put_inspection_comment.py  put_inspection_comment_simply.py  put_onhold_comment.py  put_onhold_comment_simply.py  subcommand_comment.py  utils.py
annofabcli/common/: bokeh.py  cli.py  dataclasses.py  download.py  enums.py  exceptions.py  facade.py  image.py  pandas.py  type_util.py  typing.py  utils.py  visualize.py
annofabcli/data/: logging.yaml
annofabcli/experimental/: copy_instruction.py  dashboard.py  find_break_error.py  found_break_error.py  list_labor_worktime.py  list_labor_worktime_from_csv.py  list_out_of_range_annotation_for_movie.py  mask_user_info.py  mask_visualization_dir.py  merge_peformance_per_date.py  merge_peformance_per_user.py  merge_visualization_dir.py  subcommand_experimental.py  sum_peformance_per_user.py  summarise_whole_peformance_csv.py  summarize_task_count_by_task_id.py  utils.py  write_linegraph_per_user.py  write_peformance_per_user.py  (+5 more)
docker/: Dockerfile
docs/: Makefile  conf.py  faq.rst  index.md  index.rst  input_data.md  requirements.txt  task.md
examples/: async_wait_jobs.py  validation_functions.py
scripts/: get_annotation_specs_replaced_label_id.py  mask_user_info_for_all_visualization_dir.py  mask_user_info_for_rating_performance.py
tests/: conftest.py  test____main__.py  test_annotation.py  test_annotation_specs.py  test_annotation_zip.py  test_comment.py  test_common_download.py  test_common_facade.py  test_complete_task.py  test_deprecated.py  test_experimental.py  test_filesystem.py  test_input_data.py  test_inspection_comment.py  test_instruction.py  test_job.py  test_labor.py  test_local_annotation.py  test_local_annotation_specs.py  test_local_cli.py  test_local_complete_task.py  test_local_experimental.py  test_local_filesystem.py  test_local_image.py  test_local_input_data.py  test_local_labor.py  test_local_project_member.py  test_local_stat_visualization.py  test_local_statistics.py  test_local_task.py  test_local_utils.py  test_main.py  test_my_account.py  test_organization.py  test_organization_member.py  test_project.py  test_project_member.py  test_project_update.py  test_reject_tasks.py  test_stat_visualization.py  (+6 more)
(+802 files in other folders)
