[tool.poetry]
name = "annofabcli"
version = "1.77.3"
description = "Utility Command Line Interface for AnnoFab"
authors = ["yuji38kwmt"]
license = "MIT"
keywords=["annofab", "cli"]
readme="README.md"
repository="https://github.com/kurusugawa-computer/annofab-cli"
classifiers = [
        "Development Status :: 4 - Beta",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Environment :: Console",
        "Topic :: Utilities",
        "Operating System :: OS Independent",
]


[tool.poetry.dependencies]
python = "^3.8"
requests = "*"
pyyaml = "*"
dictdiffer = "*"
more-itertools = "*"
jmespath = "*"
pyquery = "*"
isodate = "*"
annofabapi = ">=0.67.1"
python-datauri = "*"
pandas = "^2.0"
bokeh = "^3.1"
Pillow = "*"

[tool.poetry.group.test.dependencies]
pytest = "^7"
pytest-xdist = "*"
pytest-cov = "*"

[tool.poetry.group.formatter.dependencies]
black = "^23.3"

[tool.poetry.group.linter.dependencies]
# ruffのバージョンの上限を指定する理由: 
# ruffは0.0.260から"line-width"の計算を"character count"から"unicode width"に変更した。
# black 23.3(通常版)は"line-width"を"character count"で計算している。
# ruffとblackで"line-with"の計算が異なってしまうので、ruffのバージョンの上限を指定した。
# https://qiita.com/yuji38kwmt/items/04208d2d2cafe1218287
ruff = "<0.0.260"
mypy = "^1"
pylint = "^2"

types-pytz = "*"
types-requests = "*"
types-python-dateutil = "*"
types-PyYAML = "*"

[tool.poetry.group.documentation.dependencies]
sphinx = "^6.1"
pydata-sphinx-theme = ">=0.13"
sphinx-last-updated-by-git = "*"
sphinx-argparse = "*"


[tool.poetry.group.dev]
# 開発するときのみ必要なライブラリ。インストールしなくても開発はできるので、オプショナルにする
optional = true

[tool.poetry.group.dev.dependencies]
ipython = "*"

[tool.poetry.group.publish]
# リリース時に必要なツール。インストールしなくても開発できるので、オプショナルにする
optional = true

[tool.poetry.group.publish.dependencies]
# GitHubでリリース時に、 GitHub Actionでannofabcliのexeを公開している
# pythonバージョンを指定している理由: pyinstaller5.9はPython3.12未満までしかサポートしていない。
# pythonバージョンを指定しないと、annofabcli自体のpython requirementが3.12未満になってしまうため。
pyinstaller = { version = "^5.9", python = "<3.12" }

[tool.poetry.scripts]
annofabcli = "annofabcli.__main__:main"

[tool.isort]
profile = "black"
line_length = 120


[tool.black]
line-length = 120


[tool.mypy]
ignore_missing_imports = true

check_untyped_defs = true

[tool.ruff]
target-version = "py38"

ignore = [
    "G004", # `logging-f-string` : loggingでf-stringを使いたいので無視する
    "PD901", #すでに`df`という変数をいろんなところで使っているため
    "PD002", #すでにpandasで`inplace=True`はいろんなところで使っているため
    "RUF001", # 全角記号など`ambiguous unicode character`も使いたいため
    "RUF002",# 全角記号など`ambiguous unicode character`も使いたいため
    "RUF003",# 全角記号など`ambiguous unicode character`も使いたいため
    "PLC1901", # compare-to-empty-string : `if a == "`のように空文字列で直接比較したいときがあるため
    "PLR2004", # magic-value-comparison: listのサイズで判定するときがよくあるため
    "ANN101", # missing-type-self: 引数selfには型ヒントは付けていないため
    "ANN102", # missing-type-cls: 引数clsには型ヒントは付けていないため
    "ANN002", # missing-type-args
    "ANN003", # missing-type-kwargs
    "ERA", # : 役立つこともあるが、コメントアウトしていないコードも警告されるので無視する

    # いずれ無視しないようにする
    "ANN201", # missing-return-type-public-function: 
    "ANN202", # missing-return-type-private-function:
    "PLR",  # pylint Refactor 

    # 以下のルールはannofabcliのコードに合っていないので無効化した
    "RSE", # flake8-raise
    "D", # pydocstyle, Docstringを中途半端にしか書いていないので、除外する
    "C90", # mccabe 
    "T20", # flake8-print
    "SLF", #  flake8-self
    "BLE", # flake8-blind-except
    "FBT", # flake8-boolean-trap
    "TRY", # tryceratops 
    "COM", # flake8-commas 
    "S", # flake8-bandit
    "EM",#flake8-errmsg
    "EXE", # flake8-executable
    "ICN", # flake8-import-conventions
    "RET",#flake8-return
    "SIM",#flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", #pathlibを使わないコードが多いので、除外する
    "ISC", #flake8-implicit-str-concat
    "N", # pep8-naming
    "PT", # flake8-pytest-style
]

line-length = 120
select = [
    "ALL"
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.pyupgrade]
# Python3.8をサポートしているため、`typing.List`などの型ヒントは警告しないようにする
# https://beta.ruff.rs/docs/settings/#keep-runtime-typing
keep-runtime-typing = true

[tool.ruff.pylint]
max-args = 10

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

